# autocut

./: .gitignore  README.md  configure.ac
scripts/: autocut.py  convert-masks-from-rgb.sh  convert-masks-from-yuv.sh  convert-masks-to-rgb.sh  convert-masks-to-yuv.sh
src/: Makefile.am  mask.c  mask.h
